tests/reference/asr-generics_error_01-1e05cd6.stderr
semantic error: Inconsistent type variable for the function call
  --> tests/errors/generics_error_01.py:12:7
   |
12 | print(f(1,"a"))
   |       ^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
